--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "classnames": "^2.5.1",
+    "date-fns": "^3.6.0",
     "formik": "^2.4.5",
     "jwt-decode": "^4.0.0",
     "next": "14.1.4",
