--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.554.0",
+    "@azure/storage-blob": "^12.17.0",
     "aws-sdk": "^2.1598.0",
     "classnames": "^2.5.1",
     "date-fns": "^3.6.0",
