--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-multi-select-component": "^4.3.4",
     "react-spinners": "^0.13.8",
     "slugify": "^1.6.6",
+    "xlsx": "^0.18.5",
     "yup": "^1.4.0"
   },
   "devDependencies": {
