--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.598.0",
     "@azure/storage-blob": "^12.17.0",
     "classnames": "^2.5.1",
     "date-fns": "^3.6.0",
