--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-datepicker": "^6.8.0",
     "react-dom": "^18",
     "react-multi-select-component": "^4.3.4",
+    "react-select": "^5.8.0",
     "react-spinners": "^0.13.8",
     "slugify": "^1.6.6",
     "xlsx": "^0.18.5",
