--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-select": "^5.8.0",
     "react-spinners": "^0.13.8",
     "slugify": "^1.6.6",
+    "sweetalert2": "^11.12.2",
     "xlsx": "^0.18.5",
     "yup": "^1.4.0"
   },
