--- a/package.json
+++ b/package.json
@@ -11,17 +11,23 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.598.0",
     "@azure/storage-blob": "^12.17.0",
+    "add": "^2.0.6",
     "aws-sdk": "^2.1642.0",
     "classnames": "^2.5.1",
     "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
+    "draft-js": "^0.11.7",
     "formik": "^2.4.5",
+    "html-react-parser": "^5.1.12",
+    "html-to-draftjs": "^1.5.0",
     "jwt-decode": "^4.0.0",
     "next": "14.1.4",
     "nextjs-toploader": "^1.6.11",
     "react": "^18",
     "react-datepicker": "^6.8.0",
     "react-dom": "^18",
+    "react-draft-wysiwyg": "^1.15.0",
+    "react-markdown": "^9.0.1",
     "react-multi-select-component": "^4.3.4",
     "react-quill": "^2.0.0",
     "react-select": "^5.8.0",
@@ -29,6 +35,7 @@
     "slugify": "^1.6.6",
     "sweetalert2": "^11.12.2",
     "xlsx": "^0.18.5",
+    "yarn": "^1.22.22",
     "yup": "^1.4.0"
   },
   "devDependencies": {
