--- a/package.json
+++ b/package.json
@@ -18,8 +18,6 @@
     "dotenv": "^16.4.5",
     "draft-js": "^0.11.7",
     "formik": "^2.4.5",
-    "html-react-parser": "^5.1.12",
-    "html-to-draftjs": "^1.5.0",
     "jwt-decode": "^4.0.0",
     "next": "14.1.4",
     "nextjs-toploader": "^1.6.11",
@@ -39,9 +37,11 @@
     "yup": "^1.4.0"
   },
   "devDependencies": {
+    "@types/draft-js": "^0.11.18",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-draft-wysiwyg": "^1.13.8",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.4",
