--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.598.0",
     "@azure/storage-blob": "^12.17.0",
+    "@uiw/react-md-editor": "^4.0.4",
     "add": "^2.0.6",
     "aws-sdk": "^2.1642.0",
     "classnames": "^2.5.1",
